# Semantic_Ranking_and_RAG

./: .gitignore  README.md  notes.md  notes_chromadb_integration.md  pyproject.toml  summarisation_outputs.db
application/: creating_chroma_vector_database.py  data_sqlite.py  main.py  semantic_ranking_and_RAG.py  sqlite_database.py
chroma/: chroma.sqlite3
data/: case_study_texts.json  llm_models.json  outputs.txt  text_and_prompts.json
data/text_outputs/: outputs.txt
experiment/: RAG_generation.txt  semantic_outputs_chroma.txt  testing_embedding_text.py  testing_llm_text_summarisation_models.py  testing_semantic_ranking.py
src/modules/: database.py  models.py
text_outputs/: prompts.txt
